feat add resume

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <li>JavaScript</li>
                         <li>React</li>
                         <li>Typescript</li>
+                        <li>Figma</li>
                     </ul>
                 </div>
             </div>
