--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <link rel="stylesheet" href="https://i.icomoon.io/public/temp/3cb8e52af5/UntitledProject/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="index.css">
     <title>Resume</title>
 </head>
@@ -108,11 +111,10 @@
                             <b>2021</b>
                         </div>
                         <div class="education-content-right">
-                            <div class="react"><a href="https://app.rs.school/certificate/6r8ya5ee">
+                            <div class="react"><a href="https://app.rs.school/certificate/ziny08zw">
                                     THE ROLLING SCOPES
                                     SCHOOL
-                                    JAVASCRIPT/FRONT-END 2021Q1
-                                    (REACT)</a>
+                                    REACT 2021 Q3 (JAVASCRIPT)</a>
                             </div>
                         </div>
                     </div>
@@ -153,7 +155,11 @@
                 </div>
                 <div class="works-content">
                     <ul>
-                       <li><a href="https://rolling-scopes-school.github.io/annakoliada-JSFE2021Q1/english-for-kids-admin-panel/">English for Kids</a></li>
+                        <li><a
+                                href="https://rolling-scopes-school.github.io/annakoliada-JSFE2021Q1/english-for-kids-admin-panel/">English
+                                for Kids</a> (JavaScript)</li>
+                        <li><a href="https://pedantic-pasteur-d033ac.netlify.app/">Small application for edit, delete
+                                and filter notes </a> (React)</li>
                     </ul>
                 </div>
             </div>
