--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <li><a
                                 href="https://rolling-scopes-school.github.io/annakoliada-JSFE2021Q1/english-for-kids-admin-panel/">English
                                 for Kids</a> (JavaScript)</li>
-                        <li><a href="https://pedantic-pasteur-d033ac.netlify.app/">Small application for edit, delete
+                        <li><a href="https://pedantic-pasteur-d033ac.netlify.app/">Application for edit, delete
                                 and filter notes </a> (React)</li>
                     </ul>
                 </div>
