--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
                                 for Kids</a> (JavaScript)</li>
                         <li><a href="https://annakoliada.github.io/test-task/">Application for edit, delete
                                 and filter notes </a> (React)</li>
+                                <li><a href="https://nifty-tesla-8a2230.netlify.app/">Application 'Planning Pocker' (developed with my team)
+                                 </a> (React)</li>
                     </ul>
                 </div>
             </div>
