fix language level

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="english"> English:</div>
 
                 <div class="language-content">
-                    <br> Pre-Intermediate
+                    <br>Intermediate
                 </div>
             </div>
 
