--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-
-    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/3cb8e52af5/UntitledProject/style.css">
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/cc4a0f6b03/UntitledProject/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <link rel="stylesheet" href="fonts.css">
@@ -21,9 +20,20 @@
             <h1>Anna Koliada</h1>
             <div class="location-age">
                 <div class="location">Minsk, Belarus</div>
-                <div class="age">28 age</div>
+                <div class="age">29 age</div>
             </div>
+
             <div class="foto">
+            </div>
+            <div class="about">
+                <div class="title">
+                    About me
+                </div>
+                <div class="about-content">
+                    I started to get interested in programming a few years ago. I have been studying intensively for a
+                    year now. All my free time from my family I spend in development.
+                    I'm planning to become middle-frontend development in 2 years.
+                </div>
             </div>
             <div class="personal-information">
                 <div class="title">
@@ -34,6 +44,10 @@
                         <li class="phone"><a href="tel:375445353594">+375445353594</a></li>
                         <li class="telegram"><a href="#">k_anya_ch</a></li>
                         <li class="e-mail"><a href="#">anacirec@gmail.com</a></li>
+                        <li class="github"><a href="https://github.com/AnnaKoliada">GitHub</a></li>
+                        <li class="linkedin"><a
+                                href="https://www.linkedin.com/in/%D0%B0%D0%BD%D1%8F-%D0%BA%D0%BE%D0%BB%D1%8F%D0%B4%D0%B0-986564224/">LinkedIn</a>
+                        </li>
                     </ul>
 
 
@@ -47,8 +61,10 @@
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
+                        <li>SCSS</li>
                         <li>JavaScript</li>
                         <li>React</li>
+                        <li>Redux</li>
                         <li>Typescript</li>
                         <li>Figma</li>
                     </ul>
@@ -71,6 +87,17 @@
             <div class="location-age">
                 <div class="location">Minsk, Belarus</div>
                 <div class="age">29 age</div>
+            </div>
+
+            <div class="about">
+                <div class="title">
+                    About me
+                </div>
+                <div class="about-content">
+                    I started to get interested in programming a few years ago. I have been studying intensively for a
+                    year now. All my free time from my family I spend in development.
+                    I'm planning to become middle-frontend development in 2 years.
+                </div>
             </div>
             <div class="education">
                 <div class="title">
@@ -155,19 +182,45 @@
                 </div>
                 <div class="works-content">
                     <ul>
-                        <li><a
-                                href="https://rolling-scopes-school.github.io/annakoliada-JSFE2021Q1/english-for-kids-admin-panel/">English
-                                for Kids</a> (JavaScript)</li>
-                        <li><a href="https://annakoliada.github.io/test-task/">Application for edit, delete
-                                and filter notes </a> (React)</li>
-                                <li><a href="https://nifty-tesla-8a2230.netlify.app/">Application 'Planning Pocker' (developed with my team)
-                                 </a> (React)</li>
+                        <li>
+                            English for Kids
+                            <p>This is an app for kids to learn English. This is a JavaScript SPA application. Data
+                                of
+                                categories and words are stored in server. Statistics data is stored in
+                                LocalStorage.
+                                There is also an admin panel to control the game (login and password 'admin'). from
+                                where you can add and remove categories and words in the game. The backend is
+                                developed
+                                with Node.js with Express. For deploying the Frontend part, use Gh-Pages, for the
+                                Backend part - Heroku.
+                                <a
+                                    href="https://rolling-scopes-school.github.io/annakoliada-JSFE2021Q1/english-for-kids-admin-panel/">Link
+                                    to application deploy</a>
+                            </p>
+
+
+                        </li>
+                        <li>
+                            Application for edit, delete
+                                and filter notes
+                            <p>This is a React application. Data are stored in Redux. For deploy use Gh-Pages
+                                <a href="https://annakoliada.github.io/test-task/">Link to deploy</a>
+                                <a href="https://github.com/AnnaKoliada/test-task/tree/app">Link to github</a>
+                            </p>
+                        </li>
+                        <li>
+                            Planning Pocker
+                            <p>This app was developed in team. This app is for planning work time. Technologies used
+                                React, Redux, PostgreSQL, Websoket. <a
+                                    href="https://nifty-tesla-8a2230.netlify.app/">Link to deploy </a>
+                            </p>
+                        </li>
                     </ul>
                 </div>
             </div>
+
         </div>
-    </div>
-    <script src="index.js"></script>
+        <script src="index.js"></script>
 </body>
 
 </html>
