--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="education">
                 <div class="title">
-                    Eduation
+                    Education
                 </div>
                 <div class="education-content">
                     <div class="education-content-left">
@@ -149,10 +149,10 @@
             </div>
             <div class="expirence">
                 <div class="title">
-                    expirence
+                    experience
                 </div>
                 <div class="expirence-content">
-                    <div class="it">No expirence in IT</div>
+                    <div class="it">No experience in IT</div>
                     <div class="education-content">
                         <div class="education-content-left">
                             <b>2015 - present</b>
@@ -184,18 +184,9 @@
                     <ul>
                         <li>
                             English for Kids
-                            <p>This is an app for kids to learn English. This is a JavaScript SPA application. Data
-                                of
-                                categories and words are stored in server. Statistics data is stored in
-                                LocalStorage.
-                                There is also an admin panel to control the game (login and password 'admin'). from
-                                where you can add and remove categories and words in the game. The backend is
-                                developed
-                                with Node.js with Express. For deploying the Frontend part, use Gh-Pages, for the
-                                Backend part - Heroku.
+                            <p>JavaScript => Typescript => LocalStorage => Node.js(Express) =>
                                 <a
-                                    href="https://rolling-scopes-school.github.io/annakoliada-JSFE2021Q1/english-for-kids-admin-panel/">Link
-                                    to application deploy</a>
+                                    href="https://rolling-scopes-school.github.io/annakoliada-JSFE2021Q1/english-for-kids-admin-panel/">gh-pages</a>
                             </p>
 
 
@@ -203,16 +194,22 @@
                         <li>
                             Application for edit, delete
                                 and filter notes
-                            <p>This is a React application. Data are stored in Redux. For deploy use Gh-Pages
-                                <a href="https://annakoliada.github.io/test-task/">Link to deploy</a>
-                                <a href="https://github.com/AnnaKoliada/test-task/tree/app">Link to github</a>
+                            <p>React => Redux => 
+                                <a href="https://annakoliada.github.io/test-task/">gh-Pages</a> => 
+                                <a href="https://github.com/AnnaKoliada/test-task/tree/app">Github</a>
                             </p>
                         </li>
                         <li>
-                            Planning Pocker
-                            <p>This app was developed in team. This app is for planning work time. Technologies used
-                                React, Redux, PostgreSQL, Websoket. <a
-                                    href="https://nifty-tesla-8a2230.netlify.app/">Link to deploy </a>
+                            Planning Poker
+                            <p>React => Typescript => Redux => PostgreSQL => Websocket => <a
+                                    href="https://nifty-tesla-8a2230.netlify.app/">Netlify </a>
+                            </p>
+                        </li>
+                        <li>
+                            Social Network
+                            <div>On development stage</div>
+                            <p>React => Typescript => Redux =>  <a
+                                    href="https://github.com/AnnaKoliada/SocialNetWork">Github </a>
                             </p>
                         </li>
                     </ul>
